Class variables are added to generated code